--- a/data/yolov2.cfg
+++ b/data/yolov2.cfg
@@ -5,8 +5,8 @@
 # Training
 batch=64
 subdivisions=4
-width=416
-height=416
+width=352
+height=256
 channels=3
 momentum=0.9
 decay=0.0005
@@ -239,7 +239,7 @@ activation=linear
 
 
 [region]
-anchors =  0.57273, 0.677385, 1.87446, 2.06253, 3.33843, 5.47434, 7.88282, 3.52778, 9.77052, 9.16828
+anchors =  1.1665,2.7088, 2.6977,2.4869, 2.8278,3.9957, 4.3440,4.9545, 6.6817,5.5787
 bias_match=1
 classes=3
 coords=4
